--- a/html/scss/app.scss
+++ b/html/scss/app.scss
@@ -772,8 +772,9 @@ ul.footer {
 	position: absolute;
     left: 0;
     bottom: 0;
-    height: 20px;
+    height: 50px;
     width: 100%;
+    margin: 0;
     text-align: center;
 
 	li {
