--- a/html/scss/app.scss
+++ b/html/scss/app.scss
@@ -69,22 +69,6 @@ html, body {
 	color: $darkgrey;
 }
 
-.bullethead {
-		color: $orange;
-		font-size: 1.2em;
-		font-weight: 300;
-	}
-
-	ul {
-		li {
-			list-style: none;
-			span {
-				color: $bg-color;
-				font-weight: 300;
-			}
-		}
-	}
-
 h1, h2, h3, h4, h5, h6, p, label,a,span {
 	color: $darkgrey;
 	font-family: $font-family;
@@ -103,9 +87,15 @@ h1, h2 {
 	font-size: 1.5em;
 }
 
+
+
+
 p {
 	text-align: justify;
 }
+
+
+
 
 
 
@@ -408,6 +398,22 @@ td {
 /* -----------------------------------------
    Frontpage Styles
 ----------------------------------------- */
+
+.bullethead {
+		color: $orange;
+		font-size: 1.2em;
+		font-weight: 300;
+	}
+
+	ul {
+		li {
+			list-style: none;
+			span {
+				color: $bg-color;
+				font-weight: 300;
+			}
+		}
+	}
 
 #headline {
 	margin-top: 80px;
@@ -881,7 +887,7 @@ ul.footer {
 
 #container-profile {
 	.row {
-		max-width: 800px;
+		max-width: 900px;
 	}
 
 	.button {	
@@ -891,6 +897,7 @@ ul.footer {
 
 #profile-head {
 	border-top:5px solid $primary-color;
+	border-bottom:5px solid $primary-color;
 	padding: 0px 40px;
 
 	h1 {
@@ -910,7 +917,7 @@ ul.footer {
 	#description {
 		text-align: justify;
 		font-style: italic;
-		padding: 0px 30px 0px 25px;
+		padding: 0px 30px 0px 0px;
 		font-weight: 300;
 	}
 
@@ -924,7 +931,7 @@ ul.footer {
 	}
 
 	img {
-		margin-top: 10px;
+
 		width: 150px;
 		border:2px solid $bg-color;
 
@@ -947,12 +954,13 @@ ul.footer {
 
 #profile-body {
 	background-color: $bg-color;
-	padding: 30px;
+	padding: 30px 10px 30px 30px;
 
 	h2 {
 		font-size: 1.3em;
 		text-transform: uppercase;
-		font-weight: 300;
+		font-weight: 400;
+		color: $orange;
 	}
 
 	ul {
@@ -965,8 +973,18 @@ ul.footer {
 	
 	#categories {
 		position: absolute;
-		left: 5px;
+		left: 1px;
 		color: $darkgrey;
+
+		i {
+			opacity: 0.7;
+		}
+
+		li.sum-points {
+			padding: 36px 0px 30px 25px;
+			font-weight: 600;
+			font-size: 1.3em;
+		}
 	}
 
 	#points {
@@ -980,25 +998,150 @@ ul.footer {
 			font-size: 1.3em;	
 			padding: 3px 16px;
 		}
+
+		li.sum-points {
+			padding: 30px 0px 35px 0px;
+			font-size: 1.7em;
+		}
 	}
 
-	#references {
-		span {
-			margin-right: 20px;
-			padding: 5px 8px;
-			background-color: $lightgrey;
+}	
+
+
+
+
+
+
+#qualification {
+	ul {
+		margin: 0px;
+	
+		li {	
+			padding: 7px 0px;
+		}
+	}
+}
+
+#skills {
+	li {
+		margin-right: 10px;
+		margin-bottom: 10px;
+		padding: 1px 4px;
+		background-color: $lightgrey;
+		color: white;
+		text-transform: uppercase;
+		font-size: 0.8em;
+	}
+
+	.inline-list {
+		margin-top: 20px;
+	}
+}
+
+
+#profile-references {
+	border-top: 5px solid $primary-color;
+	border-bottom: 5px solid $primary-color;
+	background-color: $bg-color;
+
+	.row {
+		padding-left: 15px;
+		max-width: 915px;
+	}
+
+	#references-head {
+
+		border-top: 5px solid $primary-color;
+	
+		h2 {
 			color: white;
+			font-size: 2em;
+			margin: 0px;
+			padding: 5px;
 		}
 
-		li {
-			line-height: 2em;
+	}
+	.reference-item {
+		color: white;
+		height: 300px;
+		padding: 0px;
+		margin: 0px;
+	}
+
+	.overlay {  
+		position: absolute;
+		top: 0;
+		width: 300px;
+		height: 300px;
+		background:rgba(0,0,0,.80); 
+		/* background: url("../img/overlay.png"); */
+		text-align:center;
+		opacity:0;
+		z-index: 100;
+		-webkit-transition: opacity .9s ease;
+		-moz-transition: opacity .9s ease;
+	}
+
+	.reference-item:hover .overlay {
+		opacity:0.99;
+	}
+
+	.plus {  
+		position: relative;
+		top: 40px;
+		color: white;
+		opacity: 1;
+
+
+		h3 {
+			color: white;
+			font-size: 1em;
+			padding-bottom: 2px;
+			line-height: 5px;
+		}
+
+		span.link, span.time {
+			font-style: italic;
+			font-size: 0.5em;
+			color: white;
+			padding: 23px 0px 20px 0px;
+		}
+
+
+		.description {
+			padding: 20px;
+			padding-top: 5px;
+			font-size: 0.5em;
+		}
+
+		.tasks {
+			position: absolute;
+
+			li {
+				margin-right: 2px;
+				margin-bottom: 5px;			
+				color: white;
+				text-transform: uppercase;
+				font-size: 0.8em;
+			}
+
+			li:after {
+				content:", ";
+			}
+		
+			.inline-list {
+				margin: 0px;
+				padding: 20px;
+				text-align: center;
+			}
 		}
 	}
 }
 
 #profile-statistics {
 	/*border-top:5px solid $primary-color;*/
-	border-bottom:5px solid $primary-color;
+	
+
 	padding: 5px 0px 5px 15px;
 
 	h3 {
@@ -1083,6 +1226,8 @@ ul.footer {
    Profile List Styles
 ----------------------------------------- */
 
+
+
 .profile {
 	margin-right: 10px;
 	overflow: hidden;
@@ -1137,6 +1282,16 @@ background-color: $bg-color;
 	margin-left: 0px;
 }
 
+
+	ul.legende {
+	width: 180px;
+		li {
+			padding: 0px 7px 5px 7px;
+			margin-left: 5px;
+		}
+	}
+
+
 .overlay {  
 	position: absolute;
 	top: 43px;
@@ -1147,8 +1302,8 @@ background-color: $bg-color;
 	text-align:center;
 	opacity:0;
 	z-index: 100;
-	-webkit-transition: opacity .25s ease;
-	-moz-transition: opacity .25s ease;
+	-webkit-transition: opacity .9s ease;
+	-moz-transition: opacity .9s ease;
 }
 
 .profile-head:hover .overlay {
