--- a/html/scss/app.scss
+++ b/html/scss/app.scss
@@ -387,6 +387,16 @@ select
 
 }
 
+.reveal-modal {
+	input[type=text],
+	textarea[type=text],
+	input[type=email],
+	input[type=password], {
+		background: transparent;
+	}
+
+}
+
 textarea[type=text] {
 	border: 2px solid $darkgrey;
 	margin-top: 10px;
@@ -1392,10 +1402,11 @@ background-color: $bg-color;
 .main-section {
 	padding: 20px 20px 40px 40px;
 	margin: 0px auto;
+
 }
 
 ul.footer {
-	position: absolute;
+	position: relative;
     left: 0;
     bottom: 0;
     height: 50px;
@@ -1426,24 +1437,38 @@ ul.footer {
 
 #profile-navigation {
 	dd {
-	width: 80px;
-
+		width: 80px;
+		margin: 0px auto;
 	}
 }
 
-.tabs-content {
-	h1 {
-		font-size: 2.2em;
-		line-height: 1px;
-		padding-bottom: 40px;
-		color: $primary-color;
-		font-weight: 300;
-	}
+profile-settings {
+	.tabs-content {
+		h1 {
+			font-size: 2.2em;
+			line-height: 1px;
+			padding-bottom: 40px;
 
-	.content {
+			color: $primary-color;
+			font-weight: 300;
+		}
 
-		margin-left: -30px;	
+		.content {
+			margin-left: -30px;	
+			margin-top: -30px;
+		}
 	}
 }
 
+#education-list {
+	td {
+		line-height: 3em;
+	}
+}
 
+.content {
+		.overlay {  
+		width: 250px;
+		height: 250px;
+		}
+}
