--- a/html/scss/app.scss
+++ b/html/scss/app.scss
@@ -165,7 +165,7 @@ a.active {
 	color:$green;
 }
 
-.primary-color-font {
+.primary-font {
 	color:$primary-color;
 }
 
@@ -176,6 +176,11 @@ a.active {
 	-o-background-size: cover;
 	background-size: cover;
 	color: $bg-color;
+}
+
+.primary-bg {
+	background-color: $primary-color;
+	color: white;
 }
 
 .green-bg {
@@ -307,7 +312,7 @@ main {
 	min-height: 100%;
 }
 
-footer {
+footer.frontend-footer {
 	border-top:5px solid $primary-color;
 	text-align: center;
 
@@ -1356,6 +1361,61 @@ ul.legende {
 /* -----------------------------------------
    Backend Styles
 ----------------------------------------- */
+header {
+	z-index: 100;
+
+}
+
+
+.popup-message {
+	position: relative;
+	overflow: hidden;
+	top: -200px;
+	opacity: 0;
+	z-index: 1;
+
+	margin-top: 0px;
+	margin-bottom: -40px;
+	text-align: center;
+	padding: 10px 0px 15px 0px;
+	font-size: 1.2em;
+	letter-spacing: 1px;
+	i {
+		font-size: 1.2em;
+		margin-right: 20px;
+	}
+}
+
+.popup-message.active {
+	// Problem mit Transition bei mittels JS vergebener active-classe
+	// Test mit :hover / top: 50
+	z-index: 1;
+	opacity: 1;
+	top: 0;
+	-webkit-transition: all 0.5s ease-out;
+	-moz-transition: all 0.5s ease-out;
+	-ms-transition: all 0.5s ease-out;
+	-o-transition: all 0.5s ease-out;
+	transition: all 0.5s ease-out;
+}
+
+.main-section {
+	padding: 50px 20px 40px 40px;
+	margin: 0px auto;
+
+}
+
+header.show-for-small-only-up {
+	margin: 0px auto; 
+	text-align: center;
+	background-color: $secondary-color;
+	border-bottom: 5px solid $primary-color;
+}
+
+header.show-for-large-up {
+	margin-bottom: -6px;
+	
+}
 
 .icon-bar {
 	border-bottom: 5px solid $primary-color;
@@ -1371,20 +1431,7 @@ ul.legende {
 	a:hover {
 
 	}
-
 }
-
-#backend-nav{
-	.top-bar {
-		background-color: $secondary-color;		
-	}
-}
-
-#logo-dark {
-	width: 70px;
-	padding-top: 30px;
-}
-
 
 .tab-bar {
 	border-bottom: 5px solid $primary-color;
@@ -1411,64 +1458,70 @@ ul.legende {
 	}
 }
 
-.main-section {
-	padding: 20px 20px 40px 40px;
-	margin: 0px auto;
-
-}
-
-ul.footer {
+.be-footer {
 	position: relative;
 	left: 0;
 	height: 10px;
 	width: 100%;
-	padding: 30px 0px;
+	padding: 50px 0px;
 	margin: 0;
 	text-align: center;
 	opacity: 0.7;
-	font-size: 1.4em;
+	font-size: 0.9em;
+	opacity: 0.8;
 
-	li {
-		display: inline;
-		padding-left: 20px;
+	.love {
+		opacity: 0.5;
+		padding-bottom: 20px;
+	}
+
+	ul {
+		li {
+			display: inline;
+			padding-right: 20px;
+
+			i {
+				font-size: 1.5em;
+			}
+		}
 	}
 }
 
 .counter-area-2 {
 	.row {
-		max-width: 400px;
+		max-width: 350px;
 	}
 }
 
 .counter-area-3 {
 	.row {
-		max-width: 600px;
+		max-width: 500px;
 	}
 }
 
 .counter-area-6 {
 	.row {
-		max-width: 1100px;
+		max-width: 900px;
 	}
 }
 
 .counter {
-	width: 160px;
-	padding: 20px;
-	font-size: 1em;
+	width: 120px;
+	padding: 15px;
+	font-size: 0.9em;
 	margin-left: -3px;
 
 	.counter-value {
 		display:inline-block;
 		color: white;
-		font-size: 1.8em;
+		font-size: 1.35em;
 		font-weight: 500;
-		padding-bottom: 10px;
+		padding-bottom: 7px;
 	}
 
 	i {
-		padding-bottom: 10px;
-		font-size: 2em;
+		padding-bottom: 7px;
+		font-size: 1.7em;
 	}
 }
 
