--- a/html/scss/app.scss
+++ b/html/scss/app.scss
@@ -88,10 +88,6 @@ h1, h2 {
 	font-size: 1.5em;
 }
 
-p {
-	text-align: justify;
-}
-
 a:hover {
 	color: $primary-color;
 }
@@ -270,6 +266,7 @@ a.active {
 
 	.top-bar-section {
 		ul.right {
+			border-bottom: 5px solid $primary-color;	
 			li.active {
 				a {
 					background-color: $primary-color;
@@ -304,6 +301,10 @@ a.active {
 		padding-top: 13px;
 		width: 200px
 	}
+}
+
+img#logo_small {
+	width: 150px;
 }
 
 
@@ -348,18 +349,21 @@ footer.frontend-footer {
 		text-transform: lowercase;
 	}
 
-	#testimonial {
-		font-style: italic;
-		font-weight: 300;
-		padding-top: 20px;
 
-		img {
-			float: left;
-		}
+}
 
-		#author {
-			color: $primary-color;
-		}
+.testimonial {
+	border-bottom: 5px solid $primary-color;
+	border-top: 5px solid $primary-color;
+	font-style: italic;
+	font-size: 1.1em;
+	letter-spacing: 1px;
+	font-weight: 200;
+	line-height: 1.4em;
+
+	#author {
+		color: $primary-color;
+		font-size: 0.8em;
 	}
 }
 
@@ -560,11 +564,18 @@ ul {
 
 #headline {
 	margin-top: 80px;
-	font-size: 2.3em;
+	font-size: 2.4em;
 	text-transform: uppercase;
 	font-weight: 300;
 	letter-spacing: 1.1px;
 	color: $orange;
+
+	@media only screen and (max-width: 40em) { 
+		margin-top: 10px;
+		font-size: 1.6em;
+	}
+	
+
 } 
 
 .subline {
@@ -573,6 +584,11 @@ ul {
 	font-weight: 300;
 	letter-spacing: 1.1px;
 	font-style: italic;
+	@media only screen and (max-width: 40em) { 
+		margin-top: 10px;
+		font-size: 1.2em;
+	}
+
 } 
 
 .main-slider {
@@ -585,13 +601,21 @@ ul {
 	h2 {
 		color:$primary_color;
 		padding-bottom:20px;
+		font-size: 2.1em;
 		text-align: center;	
 		font-weight: 300;
+		@media only screen and (max-width: 40em) { 
+			margin-top: 10px;
+			font-size: 1.6em;
+		}
+
 	}
 
 	p {
 		color: $bg-color;
 		font-weight: 300;
+		text-align: justify;
+
 	}
 
 
@@ -665,6 +689,25 @@ ul {
 	top: -60px;
 }
 
+.logos {
+	img {
+		opacity: 0.4;
+
+
+	}
+	:hover {
+		opacity: 0.9;
+	}
+}
+
+.footerbuttons {
+	@media only screen and (max-width: 40em) { 
+
+		a.button {
+			width: 100%;
+		}
+	}
+}
 /* -----------------------------------------
    Login Styles
 ----------------------------------------- */
@@ -1363,6 +1406,7 @@ ul.legende {
 ----------------------------------------- */
 header {
 	z-index: 100;
+
 
 }
 
