--- a/html/scss/app.scss
+++ b/html/scss/app.scss
@@ -337,6 +337,10 @@ footer.frontend-footer {
 		margin-left: 20px;
 		color: $bg-color;
 	}
+
+	a:hover {
+		color: $primary-color;
+	}
 	
 	span {
 		color: $bg-color;
@@ -366,6 +370,30 @@ footer.frontend-footer {
 		font-size: 0.8em;
 	}
 }
+
+/* -----------------------------------------
+   Team Styles
+----------------------------------------- */
+
+.team-thumb {
+	img {	
+		border-radius: 100px;
+	}
+
+	img:hover {
+		opacity: 0.5;
+	}
+
+	h3 {
+		padding-top: 20px;
+	}
+
+	p {
+
+		font-style: italic;
+	}
+}
+
 
 /* -----------------------------------------
    Form Styles
